@@ -6,7 +6,7 @@ import de.mannodermaus.gradle.plugins.junit5.util.ClasspathSplitter
 import de.mannodermaus.gradle.plugins.junit5.util.FileLanguage
 import de.mannodermaus.gradle.plugins.junit5.util.FileLanguage.Java
 import de.mannodermaus.gradle.plugins.junit5.util.FileLanguage.Kotlin
-import de.mannodermaus.gradle.plugins.junit5.util.OnlyOnCI
+import de.mannodermaus.gradle.plugins.junit5.util.OnlyOnLocalMachine
 import de.mannodermaus.gradle.plugins.junit5.util.TestEnvironment
 import de.mannodermaus.gradle.plugins.junit5.util.assertAll
 import de.mannodermaus.gradle.plugins.junit5.util.assertThat
@@ -30,7 +30,7 @@ import java.nio.file.Paths
  * Created by Marcel Schnelle on 2018/06/19.
  * Copyright © 2018 TenTen Technologies Limited. All rights reserved.
  */
-@OnlyOnCI
+@OnlyOnLocalMachine
 @ExtendWith(TempDirectory::class)
 class FunctionalTests {
 
@@ -54,6 +54,11 @@ class FunctionalTests {
     testProjectDir.newFile("local.properties").writeText("""
       sdk.dir=${environment.androidSdkFolder.absolutePath}
       """)
+
+    // Write environment settings to gradle.properties
+    testProjectDir.newFile("gradle.properties").writeText("""
+      org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError
+    """)
 
     // Create and prepare build file
     this.buildFile = testProjectDir.newFile("build.gradle")
